objects/Ace_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ace Surveys</relationshipLabel>
        <relationshipName>Ace_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Did_a_household_member_go_to_prison__c</fullName>
        <label>Did a household member go to prison</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_you_live_with_anyone_who_was_a__c</fullName>
        <label>Did you live with anyone who was a</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>No_one_in_your_family_loved_you__c</fullName>
        <label>No one in your family loved you</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Often_pushed_grabbed_slapped_or_had_some__c</fullName>
        <label>Often pushed grabbed slapped or had some</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_grab_slap_or_throw_something_at_you__c</fullName>
        <label>Push grab slap or throw something at you</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swear_at_you_insult_you_put_you_down__c</fullName>
        <label>Swear at you insult you put you down</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touch_or_fondle_you_or_have_you_touch__c</fullName>
        <label>Touch or fondle you or have you touch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_a_household_member_depressed__c</fullName>
        <label>Was a household member depressed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Were_your_parents_ever_separated__c</fullName>
        <label>Were your parents ever separated</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>You_didnt_have_enough_to_eat_had_to_wear__c</fullName>
        <label>You didnt have enough to eat had to wear</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Ace Survey</label>
    <nameField>
        <displayFormat>ACE-{0000000000}</displayFormat>
        <label>ACE Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ace Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>